--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,11 @@
             <div class="logo-text" id="mainName">Shree Mahalakshmi Constructions</div>
         </div>
         <div class="book-visit" id="bookVisit">
-            <button>BOOK A SITE VISIT</button>
-        </div>
+    <a href="{{ url_for('index') }}#contact-section">
+        <button>BOOK A SITE VISIT</button>
+    </a>
+</div>
+
     </nav>
 
     <!-- Side Menu -->
