--- a/templates/index.html
+++ b/templates/index.html
@@ -123,13 +123,13 @@
         <button class="carousel-arrow right-arrow" onclick="moveBlogSlide(1)">&#8250;</button>
     </div>
 </section>
+<br id="contact-section">
+<br>
+<br>
+<br>
+<br>
+<br>
 
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 
 <section class="contact-section">
     <div class="contact-info">
