--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -5,7 +5,7 @@
 {% block content %}
 <style>
     :root {
-        --brown-color: #c59542; /* Adjust to your base root color */
+        --brown-color: #d7993d; /* Adjust to your base root color */
     }
 
     .dashboard-container {
