--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 
     <!-- Hero Section -->
     <section class="hero-section">
-        <img src="{{ url_for('static', filename='images/hero.webp') }}" alt="Hero Image" class="hero-image">
+        <img src="{{ url_for('static', filename='images/new2.png') }}" alt="Hero Image" class="hero-image">
     </section>
 
     <!-- About Section -->
